crates/metrics/metrics-derive/tests/compile-fail/metrics_scope.stderr
error: `scope = ..` must be set.
 --> tests/compile-fail/metrics_scope.rs:7:1
  |
7 | #[metrics()]
  | ^^^^^^^^^^^^

error: expected literal
  --> tests/compile-fail/metrics_scope.rs:11:19
   |
11 | #[metrics(scope = value)]
   |                   ^^^^^

error: Value **must** be a string literal.
  --> tests/compile-fail/metrics_scope.rs:15:19
   |
15 | #[metrics(scope = 123)]
   |                   ^^^

error: Only single `scope = ..` value is supported.
  --> tests/compile-fail/metrics_scope.rs:19:11
   |
19 | #[metrics(scope = "some.scope", scope = "another.scope")]
   |           ^^^^^^^^^^^^^^^^^^^^

error: Only single `scope = ..` value is supported.
  --> tests/compile-fail/metrics_scope.rs:23:11
   |
23 | #[metrics(random = "value")]
   |           ^^^^^^^^^^^^^^^^
